# baby-models

./: .gitignore  LICENSE.txt  README.md  build.py  hatch.toml  modelsets.json  pyproject.toml
ecoli-mothermachine-phase-EMCCD-100x-1z/: mmEMCCD_phase_100x_1z_20230322_flattener.json  mmEMCCD_phase_100x_1z_20230427_cnn.h5  mmEMCCD_phase_100x_1z_20230427_seg_params.json  modelset.json
ecoli-mothermachine-phase-sCMOS-100x-1z/: mmSCMOS_phase_100x_1z_20220804_cnn.h5  mmSCMOS_phase_100x_1z_20220804_flattener.json  mmSCMOS_phase_100x_1z_20220804_seg_params.json  modelset.json
shared/: ct_rf_20210125_9.pkl  ct_rf_20210201_12.pkl
tests/: syntax_test.py
yeast-alcatras-brightfield-EMCCD-60x-1z/: I1_evolve_unet_4s_20210302.hdf5  I1_evolve_unet_4s_20210302_seg_params.json  flattener_60x_1z_evolve_20210302.json  mb_model_60x_1z_evolve_210302.pkl  modelset.json
yeast-alcatras-brightfield-EMCCD-60x-3z/: I3_evolve_unet_4s_20210215.hdf5  I3_evolve_unet_4s_20210215_seg_params.json  flattener_60x_3z_evolve_20210215.json  mb_model_60x_3z_evolve_20210215.pkl  modelset.json
yeast-alcatras-brightfield-EMCCD-60x-5z/: I5_evolve_unet_4s_20210120.hdf5  I5_evolve_unet_4s_20210120_seg_params.json  flattener_60x_evolve_20210120.json  mb_model_60x_evolve_20210120.pkl  modelset.json
yeast-alcatras-brightfield-sCMOS-60x-1z/: modelset.json  prime_ovlp_bf_60x_1z_20221218_cnn.h5  prime_ovlp_bf_60x_1z_20221218_flattener.json  prime_ovlp_bf_60x_1z_20221218_mb_model.pkl  prime_ovlp_bf_60x_1z_20221218_seg_params.json
yeast-alcatras-brightfield-sCMOS-60x-3z/: I3_prime_unet_4s_20210215.hdf5  (+4 more)
(+8 files in other folders)
